crates/drakkar-core/tests/ui/model_handle_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
 --> tests/ui/model_handle_send.rs:8:19
  |
8 |     assert_send::<ModelHandle>();
  |                   ^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
  |
  = help: within `ModelHandle`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: ?Sized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `ModelHandle`
 --> src/artifact.rs
  |
  | pub struct ModelHandle {
  |            ^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/model_handle_send.rs:4:19
  |
4 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`
